src/test/compile-fail/main-wrong-type.rs
// error-pattern:wrong type in main function: found fn(
fn main(foo: {x: int, y: int}) { }
